fixed spacing on query menu items

--- a/css/volunteer_database.css
+++ b/css/volunteer_database.css
@@ -48,7 +48,7 @@
         overflow-x: auto;
         white-space: nowrap;
         overflow-y: auto;
-        height: 150px;
+        height: 136px;
         width: 100%;
         border: 2px solid black;
     }
